--- a/ChatSample/Jenkins/Jenkinsfile
+++ b/ChatSample/Jenkins/Jenkinsfile
@@ -2,19 +2,29 @@ pipeline {
 agent any 
     stages { 
         stage ('Build') { 
- 
+            steps{
+                echo "Build"
+            }
         }
         stage ('Test') { 
-        
+            steps{
+                echo "Test"
+            }
         }
         stage ('QA') { 
-        
+            steps{
+                echo "QA"
+            }
         }
         stage ('Deploy') { 
-        
+            steps{
+                echo "Deploy"
+            }
         }
         stage ('Monitor') { 
- 
+            steps{
+                echo "Monitor"
+            }
         }
  
     }           
