--- a/ChatSample/Jenkins/Jenkinsfile
+++ b/ChatSample/Jenkins/Jenkinsfile
@@ -4,10 +4,10 @@ agent any
         stage ('Build') { 
             steps{
                 echo "Build"
-                'git checkout Webchat_with_sample'
-                'git pull'
-                'cd Webchat_with_sample'
-                './gradlew clean build'
+                sh 'git checkout Webchat_with_sample'
+                sh 'git pull'
+                sh 'cd Webchat_with_sample'
+                sh './gradlew clean build'
             }
         }
         stage ('Test') { 
