--- a/ChatSample/Jenkins/Jenkinsfile
+++ b/ChatSample/Jenkins/Jenkinsfile
@@ -7,6 +7,7 @@ agent any
                 sh 'git checkout Webchat_with_sample'
                 sh 'git pull'
                 dir("Webchat_with_sample"){
+                    sh 'pwd;ls -l'
                     sh './gradlew clean build'
                 }
             }
