--- a/ChatSample/Jenkins/Jenkinsfile
+++ b/ChatSample/Jenkins/Jenkinsfile
@@ -8,7 +8,7 @@ agent any
                 sh 'git pull'
                 dir("ChatSample"){
                     sh 'chmod +x ./gradlew'
-                    sh './gradlew clean build'
+                    sh './gradlew clean build -x test'
                 }
             }
         }
