--- a/ChatSample/Jenkins/Jenkinsfile
+++ b/ChatSample/Jenkins/Jenkinsfile
@@ -25,6 +25,11 @@ agent any
         stage ('Deploy') { 
             steps{
                 echo "Deploy"
+                 dir("ChatSample"){
+                    sh 'docker build --tag the-service:1.0 .'
+                    sh 'docker stop service-container || true && docker rm service-container || true'
+                    sh 'docker run -d -p18080:8080 --name service-container the-service:1.0'
+                }
             }
         }
         stage ('Monitor') { 
