--- a/webchat-backend/build.gradle
+++ b/webchat-backend/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation 'org.projectlombok:lombok:1.18.18'
     implementation 'com.h2database:h2'
+    implementation 'org.liquibase:liquibase-core'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
